[gd_scene format=3]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 800.0
offset_bottom = 32.0

[node name="TimeBox" type="Label" parent="TopBar"]
layout_mode = 2
text = "00:00 | 1 Spring, Y1"

[node name="MoneyBox" type="Label" parent="TopBar"]
layout_mode = 2
text = "à¸¿ 0"

[node name="PetBar" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 40.0
offset_right = 800.0
offset_bottom = 200.0

[node name="PetCard1" type="VBoxContainer" parent="PetBar"]
layout_mode = 2

[node name="PetCard2" type="VBoxContainer" parent="PetBar"]
layout_mode = 2

[node name="PetCard3" type="VBoxContainer" parent="PetBar"]
layout_mode = 2

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1"]
